--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         <p>Select a challenge below to get started!</p>
         <a href="escramble.html" class="btn">Scramble Challenge 1</a>
         <a href="scramblehr.html" class="btn">Scramble Challenge 2</a>
+        <a href="zipcrack.html" class="btn">ZIP_CRACKER</a>
         <footer>
             <p>Scramble Hub &copy; 2025 | <a href="#">Learn More</a></p>
         </footer>
